--- a/containers/rencos-env/Dockerfile
+++ b/containers/rencos-env/Dockerfile
@@ -28,8 +28,7 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
         cmake \
         ninja-build \
         build-essential \
-        python3 \
-        python3-dev \
+        "python$PYTHON_VERSION-dev" \
         python3-pip \
         python3-venv \
         python-is-python3 \
