--- a/containers/rencos-env/Dockerfile
+++ b/containers/rencos-env/Dockerfile
@@ -40,11 +40,11 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     apt-get purge --auto-remove -y && \
     apt-get clean
 
-RUN update-alternatives --install /usr/bin/python python /usr/bin/python3.9
-RUN update-alternatives  --set python /usr/bin/python3.9
+RUN ls /usr/bin/
+RUN update-alternatives --install /usr/bin/python python /usr/bin/python3.9 1
+RUN update-alternatives  --config python
 RUN python3 -m pip install --upgrade pip
 
-RUN ls /usr/bin/
 RUN python3 -m venv /opt/python3/venv/base
 RUN python3 --version
 
