--- a/containers/rencos-env/Dockerfile
+++ b/containers/rencos-env/Dockerfile
@@ -43,12 +43,12 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
 RUN python3.9 --version
 RUN python3.9 -m pip install --upgrade pip
 
-RUN python3.9 -m venv /opt/python3/venv/base
+RUN python3.9 -m venv /usr/bin/python3.9/venv/base
 RUN python3.9 --version
 
 
-COPY requirements.txt /opt/python3/venv/base/
-RUN /opt/python3/venv/base/bin/python3 -m pip install --no-cache-dir -r /opt/python3/venv/base/requirements.txt
+COPY requirements.txt /usr/bin/python3.9/venv/base/
+RUN /usr/bin/python3.9/venv/base/bin/python3 -m pip install --no-cache-dir -r /usr/bin/python3.9/venv/base/requirements.txt
 
 COPY rencos-master .
 
