--- a/containers/rencos-env/Dockerfile
+++ b/containers/rencos-env/Dockerfile
@@ -36,6 +36,8 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
         python-is-python3 \
 		libstdc++6 \
 		gcc-multilib\
+		libjpeg-dev\
+		zlib1g-dev\
 		libc6 &&\
     apt-get remove -y gpg-agent && \
     apt-get purge --auto-remove -y && \
@@ -43,7 +45,6 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
 
 RUN python3.6 --version
 RUN python3.6 -m pip install --upgrade pip
-RUN apt install libjpeg-dev zlib1g-dev
 RUN python3.6 -m pip install --upgrade Pillow
 
 # ======================== START OF ADDITIONAL INSTALLATION ========================
