--- a/containers/rencos-env/Dockerfile
+++ b/containers/rencos-env/Dockerfile
@@ -1,5 +1,5 @@
 #FROM ubuntu:focal
-FROM cogniac/nvidia-cuda:8.0-cudnn7-devel-ubuntu16.04-20190822
+FROM nvidia/cuda:8.0-ubuntu16.04
 
 ENV LANG=C.UTF-8 LC_ALL=C.UTF-8
 
