--- a/containers/rencos-env/Dockerfile
+++ b/containers/rencos-env/Dockerfile
@@ -4,7 +4,7 @@ FROM nvidia/cuda:11.2.2-devel-ubuntu20.04
 ENV LANG=C.UTF-8 LC_ALL=C.UTF-8
 
 # Python Version x.y
-ARG PYTHON_VERSION=3.8
+ARG PYTHON_VERSION=3.6
 ARG PYLUCENE_VERSION=8.11.0
 # Uncomment to install specific version of poetry
 ENV LANG=C.UTF-8
@@ -45,11 +45,14 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     apt-get purge --auto-remove -y && \
     apt-get clean
 
-RUN python3 --version
-RUN python3 -m pip install --upgrade pip
-RUN python3 -m pip install --upgrade Pillow
+RUN python3.6 --version
+RUN python3.6 -m pip install --upgrade pip
+RUN python3.6 -m pip install --upgrade Pillow
 
 RUN pwd
+
+RUN python3.6 -m venv /opt/python3/venv/base
+RUN python3.6 --version
 
 # ======================== START OF ADDITIONAL INSTALLATION ========================
 
@@ -64,7 +67,7 @@ RUN apt-get install -y --no-install-recommends \
     
 RUN ls /usr/bin/ | grep "python"
 RUN which python$PYTHON_VERSION
-RUN python3 --version
+RUN python3.6 --version
 #RUN ln -s $(which python$PYTHON_VERSION) /usr/bin/python 
 
 
@@ -90,9 +93,9 @@ RUN curl https://dlcdn.apache.org/lucene/pylucene/pylucene-$PYLUCENE_VERSION-src
 ENV PREFIX_PYTHON=/usr \
     JCC_JDK=/usr/lib/jvm/default-java \
     ANT=ant \
-    JCC='python3 -m jcc' \
+    JCC='/opt/python3/venv/base/bin/python3.6 -m jcc' \
     NUM_FILES=10 \
-    PYTHON=python3 \
+    PYTHON=/opt/python3/venv/base/bin/python3.6 \
     NO_SHARED=1
 
 RUN cd "pylucene-$PYLUCENE_VERSION/lucene-java-$PYLUCENE_VERSION/lucene" && \
@@ -102,11 +105,11 @@ RUN cd "pylucene-$PYLUCENE_VERSION/lucene-java-$PYLUCENE_VERSION/lucene" && \
 
 RUN cd "pylucene-$PYLUCENE_VERSION/jcc" && \
     ls -la && \
-    NO_SHARED=1 JCC_JDK=/usr/lib/jvm/default-java python3 setup.py build && \
-    NO_SHARED=1 JCC_JDK=/usr/lib/jvm/default-java python3 setup.py install && \
+    NO_SHARED=1 JCC_JDK=/usr/lib/jvm/default-java /opt/python3/venv/base/bin/python3.6 setup.py build && \
+    NO_SHARED=1 JCC_JDK=/usr/lib/jvm/default-java /opt/python3/venv/base/bin/python3.6 setup.py install && \
     cd .. && \
-    make JCC="python3 -m jcc" ANT=ant PYTHON=python3 NUM_FILES=8&& \
-    make install JCC="python3 -m jcc" ANT=ant PYTHON=python3 NUM_FILES=8 && \
+    make JCC="/opt/python3/venv/base/bin/python3.6 -m jcc" ANT=ant PYTHON=/opt/python3/venv/base/bin/python3.6 NUM_FILES=8&& \
+    make install JCC="/opt/python3/venv/base/bin/python3.6 -m jcc" ANT=ant PYTHON=/opt/python3/venv/base/bin/python3.6 NUM_FILES=8 && \
     cd ../../
 
 RUN apt-get remove -y gpg-agent ant jcc build-essential && \
@@ -116,17 +119,17 @@ RUN apt-get remove -y gpg-agent ant jcc build-essential && \
 WORKDIR /usr/src
 RUN rm -rf pylucene
 
-RUN python3 -c "import lucene; lucene.initVM()"
+RUN /opt/python3/venv/base/bin/python3.6 -c "import lucene; lucene.initVM()"
 
 WORKDIR /
 
-RUN python3 -m venv /opt/python3/venv/base
-RUN python3 --version
+
 
 
 COPY requirements.txt /opt/python3/venv/base/
 
-RUN /opt/python3/venv/base/bin/python3 -m pip install --no-cache-dir -r /opt/python3/venv/base/requirements.txt
+RUN /opt/python3/venv/base/bin/python3.6 -m pip install --no-cache-dir -r /opt/python3/venv/base/requirements.txt
+
 
 COPY rencos-master .
 
