tried adding lucene to env

--- a/containers/rencos-env/Dockerfile
+++ b/containers/rencos-env/Dockerfile
@@ -52,7 +52,11 @@ RUN python3.6 -m pip install --upgrade Pillow
 RUN pwd
 
 RUN python3.6 -m venv /opt/python3/venv/base
-RUN python3.6 --version
+
+
+
+RUN source /opt/python3/venv/base/bin/activate
+RUN python3 --version
 
 # ======================== START OF ADDITIONAL INSTALLATION ========================
 
@@ -67,7 +71,7 @@ RUN apt-get install -y --no-install-recommends \
     
 RUN ls /usr/bin/ | grep "python"
 RUN which python$PYTHON_VERSION
-RUN python3.6 --version
+RUN python3 --version
 #RUN ln -s $(which python$PYTHON_VERSION) /usr/bin/python 
 
 
@@ -93,9 +97,9 @@ RUN curl https://dlcdn.apache.org/lucene/pylucene/pylucene-$PYLUCENE_VERSION-src
 ENV PREFIX_PYTHON=/usr \
     JCC_JDK=/usr/lib/jvm/default-java \
     ANT=ant \
-    JCC='/opt/python3/venv/base/bin/python3.6 -m jcc' \
+    JCC='python3 -m jcc' \
     NUM_FILES=10 \
-    PYTHON=/opt/python3/venv/base/bin/python3.6 \
+    PYTHON=python3 \
     NO_SHARED=1
 
 RUN cd "pylucene-$PYLUCENE_VERSION/lucene-java-$PYLUCENE_VERSION/lucene" && \
@@ -105,11 +109,11 @@ RUN cd "pylucene-$PYLUCENE_VERSION/lucene-java-$PYLUCENE_VERSION/lucene" && \
 
 RUN cd "pylucene-$PYLUCENE_VERSION/jcc" && \
     ls -la && \
-    NO_SHARED=1 JCC_JDK=/usr/lib/jvm/default-java /opt/python3/venv/base/bin/python3.6 setup.py build && \
-    NO_SHARED=1 JCC_JDK=/usr/lib/jvm/default-java /opt/python3/venv/base/bin/python3.6 setup.py install && \
+    NO_SHARED=1 JCC_JDK=/usr/lib/jvm/default-java python3 setup.py build && \
+    NO_SHARED=1 JCC_JDK=/usr/lib/jvm/default-java python3 setup.py install && \
     cd .. && \
-    make JCC="/opt/python3/venv/base/bin/python3.6 -m jcc" ANT=ant PYTHON=/opt/python3/venv/base/bin/python3.6 NUM_FILES=8&& \
-    make install JCC="/opt/python3/venv/base/bin/python3.6 -m jcc" ANT=ant PYTHON=/opt/python3/venv/base/bin/python3.6 NUM_FILES=8 && \
+    make JCC="python3 -m jcc" ANT=ant PYTHON=python3 NUM_FILES=8&& \
+    make install JCC="python3 -m jcc" ANT=ant PYTHON=python3 NUM_FILES=8 && \
     cd ../../
 
 RUN apt-get remove -y gpg-agent ant jcc build-essential && \
@@ -119,17 +123,15 @@ RUN apt-get remove -y gpg-agent ant jcc build-essential && \
 WORKDIR /usr/src
 RUN rm -rf pylucene
 
-RUN /opt/python3/venv/base/bin/python3.6 -c "import lucene; lucene.initVM()"
+RUN python3 -c "import lucene; lucene.initVM()"
 
 WORKDIR /
 
 
-
-
 COPY requirements.txt /opt/python3/venv/base/
 
-RUN /opt/python3/venv/base/bin/python3.6 -m pip install --no-cache-dir -r /opt/python3/venv/base/requirements.txt
-
+#RUN /opt/python3/venv/base/bin/python3 -m pip install --no-cache-dir -r /opt/python3/venv/base/requirements.txt
+RUN python3 -m pip install --no-cache-dir -r /opt/python3/venv/base/requirements.txt
 
 COPY rencos-master .
 
