tried adding lucene to env

--- a/containers/rencos-env/Dockerfile
+++ b/containers/rencos-env/Dockerfile
@@ -54,7 +54,8 @@ RUN pwd
 RUN python3.6 -m venv /opt/python3/venv/base
 
 ENV VIRTUAL_ENV /opt/python3/venv
-ENV PATH /opt/python3/venv/bin:$PATH  
+ENV PATH /opt/python3/venv/bin:$PATH
+RUN which python3
 RUN python3 --version
 
 # ======================== START OF ADDITIONAL INSTALLATION ========================
