--- a/containers/rencos-env/Dockerfile
+++ b/containers/rencos-env/Dockerfile
@@ -51,12 +51,7 @@ RUN python3.6 -m pip install --upgrade Pillow
 
 RUN pwd
 
-RUN python3.6 -m venv /opt/python3/venv/base
-
-ENV VIRTUAL_ENV /opt/python3/venv
-ENV PATH /opt/python3/venv/bin:$PATH
-RUN which python3
-RUN python3 --version
+#RUN python3.6 -m venv /opt/python3/venv/base
 
 # ======================== START OF ADDITIONAL INSTALLATION ========================
 
@@ -69,9 +64,9 @@ RUN apt-get install -y --no-install-recommends \
     git \
     default-jdk 
     
-RUN ls /usr/bin/ | grep "python"
-RUN which python$PYTHON_VERSION
-RUN python3 --version
+#RUN ls /usr/bin/ | grep "python"
+#RUN which python$PYTHON_VERSION
+#RUN python3 --version
 #RUN ln -s $(which python$PYTHON_VERSION) /usr/bin/python 
 
 
@@ -97,9 +92,9 @@ RUN curl https://dlcdn.apache.org/lucene/pylucene/pylucene-$PYLUCENE_VERSION-src
 ENV PREFIX_PYTHON=/usr \
     JCC_JDK=/usr/lib/jvm/default-java \
     ANT=ant \
-    JCC='python3 -m jcc' \
+    JCC='python3.6 -m jcc' \
     NUM_FILES=10 \
-    PYTHON=python3 \
+    PYTHON=python3.6 \
     NO_SHARED=1
 
 RUN cd "pylucene-$PYLUCENE_VERSION/lucene-java-$PYLUCENE_VERSION/lucene" && \
@@ -109,11 +104,11 @@ RUN cd "pylucene-$PYLUCENE_VERSION/lucene-java-$PYLUCENE_VERSION/lucene" && \
 
 RUN cd "pylucene-$PYLUCENE_VERSION/jcc" && \
     ls -la && \
-    NO_SHARED=1 JCC_JDK=/usr/lib/jvm/default-java python3 setup.py build && \
-    NO_SHARED=1 JCC_JDK=/usr/lib/jvm/default-java python3 setup.py install && \
+    NO_SHARED=1 JCC_JDK=/usr/lib/jvm/default-java python3.6 setup.py build && \
+    NO_SHARED=1 JCC_JDK=/usr/lib/jvm/default-java python3.6 setup.py install && \
     cd .. && \
-    make JCC="python3 -m jcc" ANT=ant PYTHON=python3 NUM_FILES=8&& \
-    make install JCC="python3 -m jcc" ANT=ant PYTHON=python3 NUM_FILES=8 && \
+    make JCC="python3.6 -m jcc" ANT=ant PYTHON=python3.6 NUM_FILES=8&& \
+    make install JCC="python3.6 -m jcc" ANT=ant PYTHON=python3.6 NUM_FILES=8 && \
     cd ../../
 
 RUN apt-get remove -y gpg-agent ant jcc build-essential && \
@@ -123,15 +118,17 @@ RUN apt-get remove -y gpg-agent ant jcc build-essential && \
 WORKDIR /usr/src
 RUN rm -rf pylucene
 
-RUN python3 -c "import lucene; lucene.initVM()"
+RUN python3.6 -c "import lucene; lucene.initVM()"
 
 WORKDIR /
 
 
-COPY requirements.txt /opt/python3/venv/base/
+#COPY requirements.txt /opt/python3/venv/base/
+
+COPY requirements.txt .
 
 #RUN /opt/python3/venv/base/bin/python3 -m pip install --no-cache-dir -r /opt/python3/venv/base/requirements.txt
-RUN python3 -m pip install --no-cache-dir -r /opt/python3/venv/base/requirements.txt
+RUN python3.6 -m pip install --no-cache-dir -r requirements.txt
 
 COPY rencos-master .
 
