tried fixing installation

--- a/containers/rencos-env/Dockerfile
+++ b/containers/rencos-env/Dockerfile
@@ -1,5 +1,5 @@
 #FROM ubuntu:focal
-quangbd/dc-python:3.6-cuda9.0-cudnn7-ubuntu16.04
+FROM quangbd/dc-python:3.6-cuda9.0-cudnn7-ubuntu16.04
 
 
 ENV LANG=C.UTF-8 LC_ALL=C.UTF-8
