--- a/containers/rencos-env/Dockerfile
+++ b/containers/rencos-env/Dockerfile
@@ -138,8 +138,8 @@ RUN python -m pip install --upgrade pip \
 	
 
 
-COPY requirements.txt /opt/python/venv/base/
-RUN /opt/python/venv/base/bin/python -m pip install --no-cache-dir -r /opt/python/venv/base/requirements.txt
+#COPY requirements.txt /opt/python/venv/base/
+#RUN /opt/python/venv/base/bin/python -m pip install --no-cache-dir -r /opt/python/venv/base/requirements.txt
 
 RUN /opt/python/venv/base/bin/python -c "import lucene; lucene.initVM()"
 
