--- a/containers/rencos-env/Dockerfile
+++ b/containers/rencos-env/Dockerfile
@@ -101,7 +101,7 @@ ENV PREFIX_PYTHON=/usr \
 	
 
 
-RUN mkdir "/root/.ant/lib" && \
+RUN mkdir -p "/root/.ant/lib" && \
 	cd "/root/.ant/lib" && \
 	curl https://repo1.maven.org/maven2/org/apache/ivy/ivy/2.4.0/ivy-2.4.0.jar && \
 	cd "/usr/src/pylucene"
