--- a/containers/rencos-env/Dockerfile
+++ b/containers/rencos-env/Dockerfile
@@ -101,10 +101,13 @@ ENV PREFIX_PYTHON=/usr \
 	
 
 
-RUN mkdir -p "/root/.ant/lib" && \
-	cd "/root/.ant/lib" && \
-	curl https://repo1.maven.org/maven2/org/apache/ivy/ivy/2.4.0/ivy-2.4.0.jar && \
-	cd "/usr/src/pylucene"
+
+
+RUN mkdir -p "/root/.ant/lib"
+
+WORKDIR /root/.ant/lib
+
+RUN	curl https://repo1.maven.org/maven2/org/apache/ivy/ivy/2.5.0/ivy-2.5.0.jar
 
 WORKDIR /usr/src/pylucene
 
