--- a/containers/rencos-env/Dockerfile
+++ b/containers/rencos-env/Dockerfile
@@ -147,10 +147,10 @@ RUN python -m pip install --upgrade pip \
     && python -m venv --system-site-packages /opt/python/venv/base
 	
 	
-#RUN /opt/python/venv/base/bin/python -m pip install --no-cache-dir -v torch==0.4.1 -f https://download.pytorch.org/whl/cu100/torch_stable.html
+RUN /opt/python/venv/base/bin/python -m pip install --no-cache-dir -v torch==0.4.1 -f https://download.pytorch.org/whl/cu100/torch_stable.html
 
 COPY requirements.txt /opt/python/venv/base/
-#RUN /opt/python/venv/base/bin/python -m pip install --no-cache-dir -r /opt/python/venv/base/requirements.txt
+RUN /opt/python/venv/base/bin/python -m pip install --no-cache-dir -r /opt/python/venv/base/requirements.txt
 
 RUN /opt/python/venv/base/bin/python -c "import lucene; lucene.initVM()"
 
