--- a/containers/rencos-env/Dockerfile
+++ b/containers/rencos-env/Dockerfile
@@ -152,9 +152,10 @@ RUN /opt/python/venv/base/bin/python -m pip install --upgrade pip
 	
 COPY torch-0.4.1-cp37-cp37m-macosx_10_7_x86_64.whl .
 
-pip torch-0.4.1-cp37-cp37m-macosx_10_7_x86_64.whl
+RUN /opt/python/venv/base/bin/python -m pip install torch-0.4.1-cp37-cp37m-macosx_10_7_x86_64.whl
 
 COPY requirements.txt /opt/python/venv/base/
+
 RUN /opt/python/venv/base/bin/python -m pip install --no-cache-dir -r /opt/python/venv/base/requirements.txt
 
 RUN /opt/python/venv/base/bin/python -c "import lucene; lucene.initVM()"
