--- a/containers/rencos-env/Dockerfile
+++ b/containers/rencos-env/Dockerfile
@@ -149,12 +149,11 @@ RUN python -m pip install --upgrade pip \
 	
 RUN /opt/python/venv/base/bin/python -m pip install --upgrade pip
 	
-	
-COPY torch-0.4.1-cp37-cp37m-macosx_10_7_x86_64.whl .
 
-RUN /opt/python/venv/base/bin/python -m pip install torch-0.4.1-cp37-cp37m-macosx_10_7_x86_64.whl
 
 COPY requirements.txt /opt/python/venv/base/
+
+RUN /opt/python/venv/base/bin/python -m pip install -v "torch==1.0.0+cu100" -f https://download.pytorch.org/whl/torch_stable.html
 
 RUN /opt/python/venv/base/bin/python -m pip install --no-cache-dir -r /opt/python/venv/base/requirements.txt
 
