--- a/containers/rencos-env/Dockerfile
+++ b/containers/rencos-env/Dockerfile
@@ -14,14 +14,13 @@ ENV LANG=C.UTF-8
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive && \
     apt-get upgrade -y && \
     apt-get install -y --no-install-recommends \
-        software-properties-common gpg-agent && \
+        software-properties-common && \
     add-apt-repository ppa:deadsnakes/ppa && \
     apt-get update && \
     apt-get remove -y software-properties-common && \
     apt-get purge --auto-remove -y && \
     apt-get clean
 
-RUN which gpg-agent
 
 # Install Python
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
@@ -42,7 +41,6 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
 		libjpeg-dev\
 		zlib1g-dev\
 		libc6 &&\
-    apt-get remove -y gpg-agent && \
     apt-get purge --auto-remove -y && \
     apt-get clean
 
