--- a/containers/rencos-env/Dockerfile
+++ b/containers/rencos-env/Dockerfile
@@ -1,6 +1,6 @@
 #FROM nvidia/cuda:11.2.2-devel-ubuntu20.04
 FROM nvidia/cuda:11.0.3-devel-ubuntu16.04
-python:3.6.15
+FROM python:3.6.15
 
 
 ENV LANG=C.UTF-8 LC_ALL=C.UTF-8
