--- a/containers/rencos-env/Dockerfile
+++ b/containers/rencos-env/Dockerfile
@@ -22,7 +22,7 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
 		software-properties-common \
     && apt-get autoremove -y && apt-get clean -y && rm -rf /var/lib/apt/lists/* 
 	
-RUN add-apt-repository ppa:deadsnakes/ppa
+RUN add-apt-repository ppa:fkrull/deadsnakes
 
 
 # Install Python
